# im-dict-ja

./: Makefile.am  README  autogen.sh  configure.ac  im-dict-ja.spec.in
data/: CLASS.txt  Makefile.am  emoji-each.txt  emoji-emoji.txt  emoji-ibus.desktop.in  emoji.txt  era-ibus.desktop.in  era.txt  era.xml  oldchar-ibus.desktop.in  oldchar.txt  symbol-ibus.desktop.in  symbol-preview.txt  symbol-utf8.txt  symbol.txt
po/: Makevars  POTFILES.in  ja.po
src/: Makefile.am  im-dict-gen.c  xml-parse.c  xml-parse.h
